Transpilador Pseudocode_Python/Sintax/PseudocodigoParser.py
# Generated from Pseudocodigo.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PseudocodigoParser ( Parser ):

    grammarFileName = "Pseudocodigo.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'inicio'", "'fin'", "'imprimir'", "'leer'", 
                     "'funcion'", "'fin_funcion'", "'retornar'", "'si'", 
                     "'entonces'", "'sino_si'", "'sino'", "'fin_si'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'=='", "'!='", "'>='", "'<='", 
                     "'='", "'>'", "'<'", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'('", "')'", "'['", "']'", "','" ]

    symbolicNames = [ "<INVALID>", "KW_INICIO", "KW_FIN", "KW_IMPRIMIR", 
                      "KW_LEER", "KW_FUNCION", "KW_FIN_FUNCION", "KW_RETORNAR", 
                      "KW_SI", "KW_ENTONCES", "KW_SINO_SI", "KW_SINO", "KW_FIN_SI", 
                      "LIT_CADENA", "LIT_FLOTANTE", "LIT_ENTERO", "OP_IGUAL", 
                      "OP_DIFERENTE", "OP_MAYOR_IG", "OP_MENOR_IG", "OP_ASIGNACION", 
                      "OP_MAYOR", "OP_MENOR", "OP_SUMA", "OP_RESTA", "OP_MULT", 
                      "OP_DIV", "OP_MODULO", "DEL_PAREN_IZQ", "DEL_PAREN_DER", 
                      "DEL_CORCH_IZQ", "DEL_CORCH_DER", "DEL_COMA", "ID", 
                      "WS" ]

    RULE_programa = 0
    RULE_instruccion = 1
    RULE_imprimir_stat = 2
    RULE_leer_stat = 3
    RULE_declaracion_var = 4
    RULE_declaracion_funcion = 5
    RULE_parametros = 6
    RULE_llamada_funcion_stat = 7
    RULE_argumentos = 8
    RULE_retornar_stat = 9
    RULE_si_stat = 10
    RULE_expresion = 11

    ruleNames =  [ "programa", "instruccion", "imprimir_stat", "leer_stat", 
                   "declaracion_var", "declaracion_funcion", "parametros", 
                   "llamada_funcion_stat", "argumentos", "retornar_stat", 
                   "si_stat", "expresion" ]

    EOF = Token.EOF
    KW_INICIO=1
    KW_FIN=2
    KW_IMPRIMIR=3
    KW_LEER=4
    KW_FUNCION=5
    KW_FIN_FUNCION=6
    KW_RETORNAR=7
    KW_SI=8
    KW_ENTONCES=9
    KW_SINO_SI=10
    KW_SINO=11
    KW_FIN_SI=12
    LIT_CADENA=13
    LIT_FLOTANTE=14
    LIT_ENTERO=15
    OP_IGUAL=16
    OP_DIFERENTE=17
    OP_MAYOR_IG=18
    OP_MENOR_IG=19
    OP_ASIGNACION=20
    OP_MAYOR=21
    OP_MENOR=22
    OP_SUMA=23
    OP_RESTA=24
    OP_MULT=25
    OP_DIV=26
    OP_MODULO=27
    DEL_PAREN_IZQ=28
    DEL_PAREN_DER=29
    DEL_CORCH_IZQ=30
    DEL_CORCH_DER=31
    DEL_COMA=32
    ID=33
    WS=34

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_INICIO(self):
            return self.getToken(PseudocodigoParser.KW_INICIO, 0)

        def KW_FIN(self):
            return self.getToken(PseudocodigoParser.KW_FIN, 0)

        def EOF(self):
            return self.getToken(PseudocodigoParser.EOF, 0)

        def instruccion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PseudocodigoParser.InstruccionContext)
            else:
                return self.getTypedRuleContext(PseudocodigoParser.InstruccionContext,i)


        def getRuleIndex(self):
            return PseudocodigoParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = PseudocodigoParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 24
            self.match(PseudocodigoParser.KW_INICIO)
            self.state = 28
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8589935032) != 0):
                self.state = 25
                self.instruccion()
                self.state = 30
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 31
            self.match(PseudocodigoParser.KW_FIN)
            self.state = 32
            self.match(PseudocodigoParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstruccionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def imprimir_stat(self):
            return self.getTypedRuleContext(PseudocodigoParser.Imprimir_statContext,0)


        def leer_stat(self):
            return self.getTypedRuleContext(PseudocodigoParser.Leer_statContext,0)


        def declaracion_var(self):
            return self.getTypedRuleContext(PseudocodigoParser.Declaracion_varContext,0)


        def declaracion_funcion(self):
            return self.getTypedRuleContext(PseudocodigoParser.Declaracion_funcionContext,0)


        def llamada_funcion_stat(self):
            return self.getTypedRuleContext(PseudocodigoParser.Llamada_funcion_statContext,0)


        def si_stat(self):
            return self.getTypedRuleContext(PseudocodigoParser.Si_statContext,0)


        def retornar_stat(self):
            return self.getTypedRuleContext(PseudocodigoParser.Retornar_statContext,0)


        def getRuleIndex(self):
            return PseudocodigoParser.RULE_instruccion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstruccion" ):
                listener.enterInstruccion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstruccion" ):
                listener.exitInstruccion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruccion" ):
                return visitor.visitInstruccion(self)
            else:
                return visitor.visitChildren(self)




    def instruccion(self):

        localctx = PseudocodigoParser.InstruccionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_instruccion)
        try:
            self.state = 41
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 34
                self.imprimir_stat()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 35
                self.leer_stat()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 36
                self.declaracion_var()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 37
                self.declaracion_funcion()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 38
                self.llamada_funcion_stat()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 39
                self.si_stat()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 40
                self.retornar_stat()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Imprimir_statContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_IMPRIMIR(self):
            return self.getToken(PseudocodigoParser.KW_IMPRIMIR, 0)

        def DEL_PAREN_IZQ(self):
            return self.getToken(PseudocodigoParser.DEL_PAREN_IZQ, 0)

        def expresion(self):
            return self.getTypedRuleContext(PseudocodigoParser.ExpresionContext,0)


        def DEL_PAREN_DER(self):
            return self.getToken(PseudocodigoParser.DEL_PAREN_DER, 0)

        def getRuleIndex(self):
            return PseudocodigoParser.RULE_imprimir_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImprimir_stat" ):
                listener.enterImprimir_stat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImprimir_stat" ):
                listener.exitImprimir_stat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImprimir_stat" ):
                return visitor.visitImprimir_stat(self)
            else:
                return visitor.visitChildren(self)




    def imprimir_stat(self):

        localctx = PseudocodigoParser.Imprimir_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_imprimir_stat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self.match(PseudocodigoParser.KW_IMPRIMIR)
            self.state = 44
            self.match(PseudocodigoParser.DEL_PAREN_IZQ)
            self.state = 45
            self.expresion(0)
            self.state = 46
            self.match(PseudocodigoParser.DEL_PAREN_DER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Leer_statContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_LEER(self):
            return self.getToken(PseudocodigoParser.KW_LEER, 0)

        def DEL_PAREN_IZQ(self):
            return self.getToken(PseudocodigoParser.DEL_PAREN_IZQ, 0)

        def ID(self):
            return self.getToken(PseudocodigoParser.ID, 0)

        def DEL_PAREN_DER(self):
            return self.getToken(PseudocodigoParser.DEL_PAREN_DER, 0)

        def getRuleIndex(self):
            return PseudocodigoParser.RULE_leer_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLeer_stat" ):
                listener.enterLeer_stat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLeer_stat" ):
                listener.exitLeer_stat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLeer_stat" ):
                return visitor.visitLeer_stat(self)
            else:
                return visitor.visitChildren(self)




    def leer_stat(self):

        localctx = PseudocodigoParser.Leer_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_leer_stat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.match(PseudocodigoParser.KW_LEER)
            self.state = 49
            self.match(PseudocodigoParser.DEL_PAREN_IZQ)
            self.state = 50
            self.match(PseudocodigoParser.ID)
            self.state = 51
            self.match(PseudocodigoParser.DEL_PAREN_DER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declaracion_varContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PseudocodigoParser.ID, 0)

        def OP_ASIGNACION(self):
            return self.getToken(PseudocodigoParser.OP_ASIGNACION, 0)

        def expresion(self):
            return self.getTypedRuleContext(PseudocodigoParser.ExpresionContext,0)


        def getRuleIndex(self):
            return PseudocodigoParser.RULE_declaracion_var

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracion_var" ):
                listener.enterDeclaracion_var(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracion_var" ):
                listener.exitDeclaracion_var(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracion_var" ):
                return visitor.visitDeclaracion_var(self)
            else:
                return visitor.visitChildren(self)




    def declaracion_var(self):

        localctx = PseudocodigoParser.Declaracion_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_declaracion_var)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.match(PseudocodigoParser.ID)
            self.state = 54
            self.match(PseudocodigoParser.OP_ASIGNACION)
            self.state = 55
            self.expresion(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declaracion_funcionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_FUNCION(self):
            return self.getToken(PseudocodigoParser.KW_FUNCION, 0)

        def ID(self):
            return self.getToken(PseudocodigoParser.ID, 0)

        def DEL_PAREN_IZQ(self):
            return self.getToken(PseudocodigoParser.DEL_PAREN_IZQ, 0)

        def DEL_PAREN_DER(self):
            return self.getToken(PseudocodigoParser.DEL_PAREN_DER, 0)

        def KW_FIN_FUNCION(self):
            return self.getToken(PseudocodigoParser.KW_FIN_FUNCION, 0)

        def parametros(self):
            return self.getTypedRuleContext(PseudocodigoParser.ParametrosContext,0)


        def instruccion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PseudocodigoParser.InstruccionContext)
            else:
                return self.getTypedRuleContext(PseudocodigoParser.InstruccionContext,i)


        def getRuleIndex(self):
            return PseudocodigoParser.RULE_declaracion_funcion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracion_funcion" ):
                listener.enterDeclaracion_funcion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracion_funcion" ):
                listener.exitDeclaracion_funcion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracion_funcion" ):
                return visitor.visitDeclaracion_funcion(self)
            else:
                return visitor.visitChildren(self)




    def declaracion_funcion(self):

        localctx = PseudocodigoParser.Declaracion_funcionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_declaracion_funcion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.match(PseudocodigoParser.KW_FUNCION)
            self.state = 58
            self.match(PseudocodigoParser.ID)
            self.state = 59
            self.match(PseudocodigoParser.DEL_PAREN_IZQ)
            self.state = 61
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==33:
                self.state = 60
                self.parametros()


            self.state = 63
            self.match(PseudocodigoParser.DEL_PAREN_DER)
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8589935032) != 0):
                self.state = 64
                self.instruccion()
                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 70
            self.match(PseudocodigoParser.KW_FIN_FUNCION)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametrosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(PseudocodigoParser.ID)
            else:
                return self.getToken(PseudocodigoParser.ID, i)

        def DEL_COMA(self, i:int=None):
            if i is None:
                return self.getTokens(PseudocodigoParser.DEL_COMA)
            else:
                return self.getToken(PseudocodigoParser.DEL_COMA, i)

        def getRuleIndex(self):
            return PseudocodigoParser.RULE_parametros

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParametros" ):
                listener.enterParametros(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParametros" ):
                listener.exitParametros(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParametros" ):
                return visitor.visitParametros(self)
            else:
                return visitor.visitChildren(self)




    def parametros(self):

        localctx = PseudocodigoParser.ParametrosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_parametros)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(PseudocodigoParser.ID)
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==32:
                self.state = 73
                self.match(PseudocodigoParser.DEL_COMA)
                self.state = 74
                self.match(PseudocodigoParser.ID)
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Llamada_funcion_statContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PseudocodigoParser.ID, 0)

        def DEL_PAREN_IZQ(self):
            return self.getToken(PseudocodigoParser.DEL_PAREN_IZQ, 0)

        def DEL_PAREN_DER(self):
            return self.getToken(PseudocodigoParser.DEL_PAREN_DER, 0)

        def argumentos(self):
            return self.getTypedRuleContext(PseudocodigoParser.ArgumentosContext,0)


        def getRuleIndex(self):
            return PseudocodigoParser.RULE_llamada_funcion_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLlamada_funcion_stat" ):
                listener.enterLlamada_funcion_stat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLlamada_funcion_stat" ):
                listener.exitLlamada_funcion_stat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLlamada_funcion_stat" ):
                return visitor.visitLlamada_funcion_stat(self)
            else:
                return visitor.visitChildren(self)




    def llamada_funcion_stat(self):

        localctx = PseudocodigoParser.Llamada_funcion_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_llamada_funcion_stat)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(PseudocodigoParser.ID)
            self.state = 81
            self.match(PseudocodigoParser.DEL_PAREN_IZQ)
            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 8858427392) != 0):
                self.state = 82
                self.argumentos()


            self.state = 85
            self.match(PseudocodigoParser.DEL_PAREN_DER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expresion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PseudocodigoParser.ExpresionContext)
            else:
                return self.getTypedRuleContext(PseudocodigoParser.ExpresionContext,i)


        def DEL_COMA(self, i:int=None):
            if i is None:
                return self.getTokens(PseudocodigoParser.DEL_COMA)
            else:
                return self.getToken(PseudocodigoParser.DEL_COMA, i)

        def getRuleIndex(self):
            return PseudocodigoParser.RULE_argumentos

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgumentos" ):
                listener.enterArgumentos(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgumentos" ):
                listener.exitArgumentos(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgumentos" ):
                return visitor.visitArgumentos(self)
            else:
                return visitor.visitChildren(self)




    def argumentos(self):

        localctx = PseudocodigoParser.ArgumentosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_argumentos)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.expresion(0)
            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==32:
                self.state = 88
                self.match(PseudocodigoParser.DEL_COMA)
                self.state = 89
                self.expresion(0)
                self.state = 94
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Retornar_statContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_RETORNAR(self):
            return self.getToken(PseudocodigoParser.KW_RETORNAR, 0)

        def expresion(self):
            return self.getTypedRuleContext(PseudocodigoParser.ExpresionContext,0)


        def getRuleIndex(self):
            return PseudocodigoParser.RULE_retornar_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRetornar_stat" ):
                listener.enterRetornar_stat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRetornar_stat" ):
                listener.exitRetornar_stat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRetornar_stat" ):
                return visitor.visitRetornar_stat(self)
            else:
                return visitor.visitChildren(self)




    def retornar_stat(self):

        localctx = PseudocodigoParser.Retornar_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_retornar_stat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(PseudocodigoParser.KW_RETORNAR)
            self.state = 96
            self.expresion(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Si_statContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_SI(self):
            return self.getToken(PseudocodigoParser.KW_SI, 0)

        def expresion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PseudocodigoParser.ExpresionContext)
            else:
                return self.getTypedRuleContext(PseudocodigoParser.ExpresionContext,i)


        def KW_ENTONCES(self, i:int=None):
            if i is None:
                return self.getTokens(PseudocodigoParser.KW_ENTONCES)
            else:
                return self.getToken(PseudocodigoParser.KW_ENTONCES, i)

        def KW_FIN_SI(self):
            return self.getToken(PseudocodigoParser.KW_FIN_SI, 0)

        def instruccion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PseudocodigoParser.InstruccionContext)
            else:
                return self.getTypedRuleContext(PseudocodigoParser.InstruccionContext,i)


        def KW_SINO_SI(self, i:int=None):
            if i is None:
                return self.getTokens(PseudocodigoParser.KW_SINO_SI)
            else:
                return self.getToken(PseudocodigoParser.KW_SINO_SI, i)

        def KW_SINO(self):
            return self.getToken(PseudocodigoParser.KW_SINO, 0)

        def getRuleIndex(self):
            return PseudocodigoParser.RULE_si_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSi_stat" ):
                listener.enterSi_stat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSi_stat" ):
                listener.exitSi_stat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSi_stat" ):
                return visitor.visitSi_stat(self)
            else:
                return visitor.visitChildren(self)




    def si_stat(self):

        localctx = PseudocodigoParser.Si_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_si_stat)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(PseudocodigoParser.KW_SI)
            self.state = 99
            self.expresion(0)
            self.state = 100
            self.match(PseudocodigoParser.KW_ENTONCES)
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8589935032) != 0):
                self.state = 101
                self.instruccion()
                self.state = 106
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==10:
                self.state = 107
                self.match(PseudocodigoParser.KW_SINO_SI)
                self.state = 108
                self.expresion(0)
                self.state = 109
                self.match(PseudocodigoParser.KW_ENTONCES)
                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8589935032) != 0):
                    self.state = 110
                    self.instruccion()
                    self.state = 115
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 120
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==11:
                self.state = 121
                self.match(PseudocodigoParser.KW_SINO)
                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8589935032) != 0):
                    self.state = 122
                    self.instruccion()
                    self.state = 127
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 130
            self.match(PseudocodigoParser.KW_FIN_SI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpresionContext(ParserRuleContext):
        __slots__ = 'parser'
